Multiple things: 1. Adding Python 3.9 builds. 2. Slightly improving the benchmark.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,7 @@ environment:
   - PYTHON: 36
   - PYTHON: 37
   - PYTHON: 38
+  - PYTHON: 39
   pypipassword:
     # https://ci.appveyor.com/tools/encrypt
     secure: 7hxZ+XinYPLuIS1aHZbTcA==
