--- a/.travis.yml
+++ b/.travis.yml
@@ -267,12 +267,9 @@ after_script:
       $PIP install --user "six>=1.9.0"
       $PIP install --user twine
       cp .pypirc ~/.pypirc
-      if [ "$PYPI_PASSWORD" = "" ] ; then
-        echo "PyPi password is empty!"
-      else
-        echo "PyPi password is set!"
-      fi
-      $PY -m twine upload -r pypi -p $PYPI_PASSWORD --skip-existing python_bindings/dist/*
+      pwd
+      ls /io/python_bindings/
+      $PY -m twine upload -r pypi -p $PYPI_PASSWORD --skip-existing /io/python_bindings/dist/* &>/dev/null
       echo "Twine upload status: $?"
     else
       echo "Skipping deployment because this is not a tagged commit"
