Move WIN32 binaries to output folder
CMAKE_BINARY_DIR - is an output folder for VS2019. 
CMAKE_SOURCE_DIR - is a root of repo. it's annoying to have all compiled libs with the source code.

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -85,9 +85,9 @@ if (WIN32)
     # which creates build-specific output folders. However, they will all
     # be placed inside the debug subfolder.
     # To avoid this, we set these output variables.
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 else()
     if (NOT CMAKE_BUILD_TYPE)
         set (CMAKE_BUILD_TYPE Release CACHE STRING "Build types: Release Debug" FORCE)
