--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,13 +12,13 @@ environment:
     # SSE2 is the default in recent VS, but let's keep for older versions, see, e.g.: https://github.com/weidai11/cryptopp/issues/445
     ARCH: SSE2
   matrix:
-  - PYTHON: 39
-  - PYTHON: 310
   - PYTHON: 27
+  - PYTHON: 39
   - PYTHON: 35
   - PYTHON: 36
   - PYTHON: 37
   - PYTHON: 38
+  - PYTHON: 310
   pypipassword:
     # https://ci.appveyor.com/tools/encrypt
     secure: 7hxZ+XinYPLuIS1aHZbTcA==
@@ -47,7 +47,7 @@ install:
     ECHO Platform : %PLATFORM%
     ECHO Python : %PYTHON%
     ECHO PATH : %PATH%
-    dir "C:\"
+    set
     python --version
     python -m pip --version
 build_script:
