adding test pypi

--- a/.pypirc
+++ b/.pypirc
@@ -5,3 +5,7 @@ index-servers =
 [pypi]
 repository=https://upload.pypi.org/legacy/
 username=searchivarius
+
+[testpypi]
+repository = https://test.pypi.org/legacy/
+username=searchivarius
