adding 3.10 unix build

--- a/.travis.yml
+++ b/.travis.yml
@@ -114,6 +114,21 @@ matrix:
         - python3.9-dev
         - python3.9-distutils
   - os: linux
+    env: PYTHON=3.10
+    dist: xenial
+    services:
+    - docker
+    addons:
+      apt:
+        update: true
+        sources:
+        - ubuntu-toolchain-r-test
+        - deadsnakes
+        packages:
+        - *core_build
+        - python3.10-dev
+        - python3.10-distutils
+  - os: linux
     dist: xenial
     env: PYTHON=3.6
     arch: arm64
@@ -175,6 +190,22 @@ matrix:
          - *core_build
          - python3.9-dev
          - python3.9-distutils
+  - os: linux
+    dist: xenial
+    env: PYTHON=3.10
+    arch: arm64
+    services:
+    - docker
+    addons:
+      apt:
+       update: true
+       sources:
+       - deadsnakes
+       - sourceline: 'ppa:ubuntu-toolchain-r/test'
+       packages:
+         - *core_build
+         - python3.10-dev
+         - python3.10-distutils
   - os: osx
     env: PYTHON=2.7-dev
     osx_image: xcode11.2
@@ -192,6 +223,9 @@ matrix:
     osx_image: xcode11.2
   - os: osx
     env: PYTHON=3.9-dev
+    osx_image: xcode11.2
+  - os: osx
+    env: PYTHON=3.10-dev
     osx_image: xcode11.2
 
   - os: osx
@@ -211,6 +245,9 @@ matrix:
     osx_image: xcode12
   - os: osx
     env: PYTHON=3.9-dev
+    osx_image: xcode12
+  - os: osx
+    env: PYTHON=3.10-dev
     osx_image: xcode12
   allow_failures:
   - os: osx
