--- a/.pypirc
+++ b/.pypirc
@@ -1,11 +1,12 @@
 [distutils]
 index-servers =
     pypi
+    testpypi
 
 [pypi]
 repository=https://upload.pypi.org/legacy/
 username=searchivarius
 
 [testpypi]
-repository = https://test.pypi.org/legacy/
+repository=https://test.pypi.org/legacy/
 username=searchivarius
