Add Python 3.11 to AppVeyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,6 +18,7 @@ environment:
   - PYTHON: 38
   - PYTHON: 39
   - PYTHON: 310
+  - PYTHON: 311
   pypipassword:
     # https://ci.appveyor.com/tools/encrypt
     secure: 7hxZ+XinYPLuIS1aHZbTcA==
