--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -35,7 +35,11 @@ if(NOT WIN32)
 endif()
 #message(FATAL_ERROR "stopping... compiler version is: ${CMAKE_CXX_COMPILER_ID} ${CXX_COMPILER_VERSION}")
 
-set(SIMD_FLAGS " -march=native")
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "ppc|powerpc")
+    set(SIMD_FLAGS " -mtune=native")
+else()
+    set(SIMD_FLAGS " -march=native")
+endif()
 #set(SIMD_FLAGS "-march=x86-64")
 #set(SIMD_FLAGS "-march=core2")
 #set(SIMD_FLAGS "-fpic -msse4.2")
