--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ install:
 - cmd: '"c:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat" %PLATFORM%'
 - cmd: git config core.symlinks true
 - cmd: git reset --hard
-- ps: Remove-Item -Recurse -Force C:/cygwin*
+- ps: dir C:/
 #- ps: Remove-Item -Recurse -Force C:/cygwin
 #- ps: Remove-Item -Recurse -Force C:/cygwin64
 - ps: |
