--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,8 +25,8 @@ install:
 - cmd: '"c:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat" %PLATFORM%'
 - cmd: git config core.symlinks true
 - cmd: git reset --hard
-- cmd: rmdir "C:\cygwin"
-- cmd: rmdir "C:\cygwin64"
+- cmd: rmdir "C:\cygwin" /s /q
+- cmd: rmdir "C:\cygwin64" /s /q
 #- ps: Remove-Item -Recurse -Force C:/cygwin
 #- ps: Remove-Item -Recurse -Force C:/cygwin64
 - ps: |
