--- a/python_bindings/setup.cfg
+++ b/python_bindings/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-description-file = README.md
+description_file = README.md
 
 [flake8]
-max-line-length = 100
+max_line_length = 100
 exclude = build,.eggs,.tox,integration_tests,docs
