--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,11 +12,11 @@ environment:
     ARCH: SSE2
   matrix:
   - PYTHON: 37
-  - PYTHON: 38
-  - PYTHON: 312
-  - PYTHON: 310
-  - PYTHON: 39
-  - PYTHON: 311
+#  - PYTHON: 38
+#  - PYTHON: 312
+#  - PYTHON: 310
+#  - PYTHON: 39
+#  - PYTHON: 311
   pypipassword:
     # https://ci.appveyor.com/tools/encrypt
     secure: 7hxZ+XinYPLuIS1aHZbTcA==
