--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,8 +12,8 @@ environment:
     ARCH: SSE2
   matrix:
   - PYTHON: 37
+  - PYTHON: 312
 #  - PYTHON: 38
-#  - PYTHON: 312
 #  - PYTHON: 310
 #  - PYTHON: 39
 #  - PYTHON: 311
