WIP: IMAX実機で動くような実装追加

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -49,6 +49,8 @@ if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
     endif()
     set (CMAKE_CXX_FLAGS_RELEASE "${WARN_FLAGS} -Ofast -lm -DNDEBUG -std=c++11 -pthread  -DHAVE_CXX0X ${SIMD_FLAGS} -Wl,--no-as-needed -fpic -fpermissive")
     set (CMAKE_CXX_FLAGS_DEBUG   "${WARN_FLAGS} -ggdb  -lm -DNDEBUG -std=c++11 -pthread  -DHAVE_CXX0X ${SIMD_FLAGS} -Wl,--no-as-needed -fpic -fpermissive")
+    set (CMAKE_C_FLAGS_RELEASE "${WARN_FLAGS} -Ofast -lm -DNDEBUG -pthread -DHAVE_CXX0X ${SIMD_FLAGS} -Wl,--no-as-needed -fpic -fcommon")
+    set (CMAKE_C_FLAGS_DEBUG   "${WARN_FLAGS} -ggdb  -lm -DNDEBUG -pthread -DHAVE_CXX0X ${SIMD_FLAGS} -Wl,--no-as-needed -fpic -fcommon")
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
     if (CXX_COMPILER_VERSION VERSION_LESS 14.0.1)
         message(FATAL_ERROR "Intel version must be at least 14.0.1!")
