fix: NCでの挙動を修正

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -119,3 +119,5 @@ message(STATUS "OS:                ${CMAKE_SYSTEM_NAME}")
 message(STATUS "Compiler:          ${CMAKE_CXX_COMPILER_ID} ${CXX_COMPILER_VERSION}")
 message(STATUS "CXX flags release: ${CMAKE_CXX_FLAGS_RELEASE}")
 message(STATUS "CXX flags debug:   ${CMAKE_CXX_FLAGS_DEBUG}")
+message(STATUS "C flags release:   ${CMAKE_C_FLAGS_RELEASE}")
+message(STATUS "C flags debug:     ${CMAKE_C_FLAGS_DEBUG}")
