Use full packaging

--- a/python_bindings/tox.ini
+++ b/python_bindings/tox.ini
@@ -2,9 +2,11 @@
 envlist = py27, py35, py36
 
 [testenv]
-commands = {envpython} setup.py test
+commands =
+    pytest
 deps =
     -rrequirements.txt
+    pytest
 
 [testenv:style]
 deps =
