--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [ "3.8" ]
+        python-version: [ "3.10", "3.9", "3.8" ]
     steps:
       - uses: actions/checkout@v4
 
