--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -8,7 +8,7 @@
 #
 #
 
-cmake_minimum_required (VERSION 2.8)
+cmake_minimum_required (VERSION 3.10)
 
 project (NonMetricSpaceLib)
 
@@ -19,11 +19,11 @@ project (NonMetricSpaceLib)
 # Taken&Modified from Boost.cmake
 #
 function(CXX_COMPILER_DUMPVERSION _OUTPUT_VERSION)
-
-  exec_program(${CMAKE_CXX_COMPILER}
-    ARGS ${CMAKE_CXX_COMPILER_ARG1} -dumpversion
-    OUTPUT_VARIABLE COMPILER_VERSION
-  )
+  execute_process(
+      COMMAND ${CMAKE_CXX_COMPILER} -dumpversion
+      OUTPUT_VARIABLE COMPILER_VERSION
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
   #string(REGEX REPLACE "([0-9])\\.([0-9])(\\.[0-9])?" "\\1\\2"
   #   COMPILER_VERSION ${COMPILER_VERSION})
 
