--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
         os: [ ubuntu-latest ]
         python-version: [ "3.13", "3.12", "3.11", "3.10", "3.9", "3.8" ]
     steps:
-      - name: Install prerequesites
+      - name: Install prerequisites
         run: |
           sudo apt-get update
           sudo apt-get install libboost-all-dev libgsl0-dev libeigen3-dev
@@ -39,3 +39,37 @@ jobs:
       - name: Test with pytest and generate coverage file
         run:
           cd python_bindings && uvx -p ${{ matrix.python-version }} --with tox-uv tox -e py
+
+  name: Build
+
+  on: [ push, pull_request ]
+
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-13, macos-latest ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v5
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==3.1.3
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+        with:
+          package-dir: python_bindings
+        # to supply options, put them in 'env', like:
+        # env:
+        #   CIBW_SOME_OPTION: value
+        #   ...
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
