--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,14 +50,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==3.1.3
-
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        uses: pypa/cibuildwheel@v2.16.5
         with:
           package-dir: python_bindings
         # to supply options, put them in 'env', like:
