--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,12 +54,12 @@ jobs:
       - uses: actions/setup-python@v5
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==3.1.3
+        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse python_bindings/
         env:
-          CIBW_SKIP: "*-win32 cp3{6,7,8}-* pp*-* *_i686"
+          CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-*"
         # to supply options, put them in 'env', like:
         # env:
         #   CIBW_SOME_OPTION: value
