--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,12 @@
 name: Tests
 
-permissions: { }
+permissions: {}
 
 on:
   push:
-    branches: [ "**" ]
+    branches: ["**"]
   pull_request:
-    branches: [ "**" ]
+    branches: ["**"]
 
 jobs:
   tests:
@@ -16,8 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
-        python-version: [ "3.13", "3.12", "3.11", "3.10", "3.9", "3.8" ]
+        os: [ubuntu-latest]
+        python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
     steps:
       - name: Install prerequisites
         run: |
@@ -38,14 +38,21 @@ jobs:
 
       - name: Test with pytest and generate coverage file
         run:
-          cd python_bindings && uvx -p ${{ matrix.python-version }} --with tox-uv tox -e py
+          cd python_bindings && uvx -p ${{ matrix.python-version }} --with
+          tox-uv tox -e py
 
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-13, macos-latest ]
+        os:
+          - ubuntu-latest
+          - ubuntu-24.04-arm
+          #          - windows-latest
+          #          - windows-11-arm
+          - macos-13
+          - macos-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -53,11 +60,11 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v5
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse python_bindings/
+        run: uvx cibuildwheel --output-dir wheelhouse python_bindings/
         env:
           CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-*"
         # to supply options, put them in 'env', like:
