--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,19 +53,33 @@ jobs:
           - windows-11-arm
           - macos-13
           - macos-latest
-
     steps:
       - uses: actions/checkout@v4
-
-      # Used to host cibuildwheel
       - uses: actions/setup-python@v5
-
       - name: Install uv
         uses: astral-sh/setup-uv@v3
-
       - name: Build wheels
-        run: uv build python_bindings/ --wheel
-
+        run: uv build --wheel python_bindings/
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: python_bindings/dist/*.whl
+  build_wheels_mac:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - macos-13
+          - macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Build wheels
+        run:
+          CXXFLAGS="${CXXFLAGS/-march=native/}" uv build --wheel python_bindings/
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.os }}-${{ strategy.job-index }}
