--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,6 +69,7 @@ jobs:
         with:
           name: wheels-${{ matrix.python-version }}-${{ matrix.os }}
           path: python_bindings/dist/*.whl
+
   build_wheels_mac:
     name: Build (Mac)
     runs-on: ${{ matrix.os }}
@@ -77,7 +78,8 @@ jobs:
         python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
         os:
           - macos-13
-          - macos-latest
+          - macos-14
+          - macos-15
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
